--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,10 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+              "src/styles.scss",
               "./node_modules/primeng/resources/themes/saga-blue/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeicons/primeicons.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
@@ -104,7 +104,7 @@
               "src/styles.scss",
               "./node_modules/primeng/resources/themes/saga-blue/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeicons/primeicons.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
